# rpg

./: CMakeLists.txt
src/: main.c
